--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: 파이썬 데이터 분석
-description: 파이썬 언어를 이용한 데이터 분석 기초 지식 제공
+title: 수학자를 위한 머신러닝
+description: 파이썬 언어를 이용한 데이터 분석과 머신러닝의 기초 지식 제공 
 show_downloads: false
 github:
   is_project_page: false
